# verda-cloud-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FEATURE_AUDIT.md  FEATURE_STATUS.md  GITHUB_SETUP.md  LICENSE  README.md  README_ENHANCED.md  SECURITY.md  V2.5.0_ACTION_PLAN.md  pyproject.toml  pytest.ini  run_dashboard.py  test_dashboard.html  test_dashboard_v2.html  test_report.json
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: BEST_PRACTICES.md  TESTING.md
scripts/: restart-mcp.ps1  test-mcp-connection.ps1  verda-cli.ps1
src/verda_mcp/: __main__.py  advanced_tools.py  api_server.py  client.py  config.py  cost_analytics.py  dashboard.html  dataset_tools.py  distributed_training.py  extended_tools.py  gdrive_tools.py  gpu_optimizer.py  live_dashboard.py  live_data.py  model_hub.py  notifications.py  performance_advisor.py  server.py  server_compact.py  smart_deployer.py  spot_manager.py  ssh_tools.py  testing_tools.py  timeout_utils.py  training_intelligence.py  training_templates.py  training_tools.py  watchdog.py
tests/: test_all_tools.py  test_dashboard_ui.py  test_e2e_playwright.py  test_playwright_integration.py  test_script_tools.py
