[project]
name = "verda-cloud-mcp"
version = "2.1.0"
description = "Ultimate MCP server for Verda Cloud GPU management - 78 tools, spot optimization, training automation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Ghenghis", email = ""},
]
keywords = [
    "mcp",
    "verda",
    "gpu",
    "cloud",
    "ai",
    "machine-learning",
    "spot-instances",
    "training",
    "claude",
    "anthropic",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "verda>=1.18.0",
    "paramiko>=3.0.0",
    "aiohttp>=3.9.0",
]

[project.urls]
Homepage = "https://github.com/Ghenghis/verda-cloud-mcp"
Documentation = "https://github.com/Ghenghis/verda-cloud-mcp#readme"
Repository = "https://github.com/Ghenghis/verda-cloud-mcp.git"
Issues = "https://github.com/Ghenghis/verda-cloud-mcp/issues"
Changelog = "https://github.com/Ghenghis/verda-cloud-mcp/blob/main/CHANGELOG.md"

[project.scripts]
verda-mcp = "verda_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/verda_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.14.10",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
